Fix menu not showing

--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -1,25 +1,26 @@
-.menu-container{
-  background: rgba(0, 0, 0, 0.5);
+.menu-container {
+  background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
+  z-index: 2;
   text-align: center;
-  transition: all 0.5s ease-in-out;
 }
 .menu-container-none {
   display: none;
 }
-.menu-list-container{
+.menu-list-container {
   display: grid;
   justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
 }
-.menu-list-container ul li{
+.menu-list-container ul li {
   text-transform: uppercase;
-  font-size: 40px;
-  margin-bottom:20px;
+  font-size: 50px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .menu-list-container ul li a {
